# COGITAO

./: README.md  calculate_conditions.py  check_all_is_well.ipynb  check_for_duplicate.ipynb  demo.ipynb  dev.ipynb  generate_experiment_data.py  generate_shapes.py  generator.py  nips_huggingface.ipynb  paper_plots.ipynb  pyproject.toml  test.croissant.json
arcworld/: constants.py  general_utils.py  hdf5_utils.py
arcworld/conditionals/: single_shape_conditionals.py
arcworld/point_cloud/: point_cloud.py  utils.py
arcworld/shapes/: __init__.py  base.py  conditional_statistics.ipynb  diamond.py  random_shape.py  rectangle.py  shape_example.py  singe_pixel.py  straight_line.py  t_shape.py  utils.py
arcworld/transformations/: shape_transformations.py
deprecated/: check_all_is_well.ipynb  convert_parquet.py  dev.ipynb  nips_huggingface.ipynb
experiment_configs/: compositionality.py  generalization.py
utils/: config_validation.py  db_utils.py
