[tool.poetry]
name = "before-arc"
version = "0.1.0"
description = "Synthetic task generation for the ARC Challange"
authors = ["yassinetb <ybenchekroun@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.9.3"
pandas = "^2.0.2"
tqdm = "^4.65"
matplotlib = "*"
h5py = "^3.11.0"
factory-boy = "^3.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ruff = "^0.0.272"
black = "^23.3.0"
mypy = "^1.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[tool.black]
line-length = 88


[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"